flux/verify-flux-images/.chainsaw-test/pod-ghcr-notification-controller.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ghcr-notification-controller
spec:
  containers:
  - name: pod-ghcr-notification-controller
    image: ghcr.io/fluxcd/notification-controller:replacethistag
