flux/verify-flux-images/.chainsaw-test/pod-ghcr-source-controller.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ghcr-source-controller
spec:
  containers:
  - name: pod-ghcr-source-controller
    image: ghcr.io/fluxcd/source-controller:replacethistag
