flux/verify-flux-images/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: verify-flux-images
spec:
  steps:
  - name: 01 - Create policy and verify
    try:
    - apply:
        file: ../verify-flux-images.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: verify-flux-images
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Discover tag for fluxcd/source-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/source-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-source-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 03 - Verify fluxcd/source-controller
    try:
    - apply:
        file: pod-ghcr-source-controller.yaml
  - name: 04 - Discover tag for fluxcd/kustomize-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/kustomize-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-kustomize-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 05 - Verify fluxcd/kustomize-controller
    try:
    - apply:
        file: pod-ghcr-kustomize-controller.yaml
  - name: 06 - Discover tag for fluxcd/helm-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/helm-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-helm-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 07 - Verify fluxcd/helm-controller
    try:
    - apply:
        file: pod-ghcr-helm-controller.yaml
  - name: 08 - Discover tag for fluxcd/notification-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/notification-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-notification-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 09 - Verify fluxcd/notification-controller
    try:
    - apply:
        file: pod-ghcr-notification-controller.yaml
  - name: 10 - Discover tag for fluxcd/image-reflector-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/image-reflector-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-image-reflector-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 11 - Verify fluxcd/image-reflector-controller
    try:
    - apply:
        file: pod-ghcr-image-reflector-controller.yaml
  - name: 12 - Discover tag for fluxcd/image-automation-controller and update Pod
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          IMAGEREPO=ghcr.io/fluxcd/image-automation-controller
          LATESTTAG=$(oras repo tags $IMAGEREPO | egrep "^v[0-9]+.[0-9]+.[0-9]+$" | sort -t "." -k1,1n | tail -n1)
          MANIFEST=pod-ghcr-image-automation-controller.yaml
          echo "Latest version of $IMAGEREPO is $LATESTTAG"
          sed -i "s/replacethistag/${LATESTTAG}/g" $MANIFEST
          echo "Replaced image is now $(yq e .spec.containers[0].image $MANIFEST)"
  - name: 13 - Verify fluxcd/image-automation-controller
    try:
    - apply:
        file: pod-ghcr-image-automation-controller.yaml
