flux/verify-flux-images/.chainsaw-test/chainsaw-test.yml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: verify-flux-images
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ./../verify-flux-images.yaml
    - assert:
        file: policy-assert.yaml
